--- a/number_ROI.ipynb
+++ b/number_ROI.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /home/leij/.virtualenvs/obj-detection-py3/lib/python3.5/site-packages/tensorflow/contrib/learn/python/learn/datasets/base.py:198: retry (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use the retry module or similar alternatives.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -26,16 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f588de15860>"
+       "(1080, 1920, 3)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -52,12 +42,35 @@
    ],
    "source": [
     "img = cv2.imread('/home/leij/Pictures/bus-test.png')\n",
-    "plt.imshow(img)"
+    "plt.imshow(img)\n",
+    "img.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3157894736842105"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newImg = imutils.resize(img,width=600)\n",
+    "newImg.shape[1] / float(1900\n",
+    "                    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +88,7 @@
       "Parsing cfg/yolo.cfg\n",
       "Loading bin/yolov2.weights ...\n",
       "Successfully identified 203934260 bytes\n",
-      "Finished in 0.02394723892211914s\n",
+      "Finished in 0.029379844665527344s\n",
       "Model has a coco model name, loading coco labels.\n",
       "\n",
       "Building net ...\n",
@@ -115,7 +128,7 @@
       " Load  |  Yep!  | conv 1x1p0_1    linear           | (?, 19, 19, 425)\n",
       "-------+--------+----------------------------------+---------------\n",
       "GPU mode with 0.8 usage\n",
-      "Finished in 5.974666118621826s\n",
+      "Finished in 5.929053783416748s\n",
       "\n"
      ]
     }
@@ -135,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -149,7 +162,7 @@
        " 'topleft': {'x': 271, 'y': 450}}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,16 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f5888a1b160>"
+       "<matplotlib.image.AxesImage at 0x7fcf78135208>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -207,16 +220,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f58887d4748>"
+       "<matplotlib.image.AxesImage at 0x7fcf780d8ef0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -238,16 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f5888788cf8>"
+       "<matplotlib.image.AxesImage at 0x7fcf780804a8>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -271,16 +284,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f5888742a90>"
+       "<matplotlib.image.AxesImage at 0x7fcf619bc278>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -316,12 +329,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "cnts = cv2.findContours(thresh.copy(), cv2.RETR_EXTERNAL,cv2.CHAIN_APPROX_SIMPLE)\n",
     "cnts = cnts[0] if imutils.is_cv2() else cnts[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "255"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(cnts)"
    ]
   },
   {
